--- a/ManageCenter/ui/PasswordWindow.xaml
+++ b/ManageCenter/ui/PasswordWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TicketCheckStation"
+        xmlns:local="clr-namespace:ManageCenter"
         xmlns:myui="clr-namespace:MyCustomControlLibrary;assembly=MyCustomControlLibrary"
         mc:Ignorable="d" ResizeMode="NoResize"
         Icon="/ManageCenter;component/aislogo_48.ico"
