--- a/ManageCenter/style/ValueDictionary.xaml
+++ b/ManageCenter/style/ValueDictionary.xaml
@@ -73,8 +73,10 @@
         <Setter Property="Height" Value="24"/>
     </Style>
     <Style x:Key="rowstyle" TargetType="{x:Type DataGridRow}">
-        <Setter Property="Height" Value="22"/>
+        <Setter Property="Height" Value="25"/>
         <Setter Property="FontSize" Value="14"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="Padding" Value="3"/>
     </Style>
     <Style TargetType="DataGridColumnHeader" x:Key="DataGridContentHeaderStyle">
         <Setter Property="BorderThickness" Value="0"/>
